--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,12 +14,12 @@ body {
 }
 
 a {
-  color: #94c045;
+  color: #0d6efd;
   text-decoration: none;
 }
 
 a:hover {
-  color: #aacd6b;
+  color: #84D2F6;
   text-decoration: none;
 }
 
@@ -43,7 +43,7 @@ h1, h2, h3, h4, h5, h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #94c045;
+  background: #84D2F6;
   width: 40px;
   height: 40px;
   border-radius: 4px;
@@ -57,7 +57,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .back-to-top:hover {
-  background: #a6ca63;
+  background: #91E5F6;
   color: #fff;
 }
 
@@ -574,7 +574,7 @@ section {
 
 .about .content ul i {
   font-size: 24px;
-  color: #94c045;
+  color: #84D2F6;
   position: absolute;
   left: 0;
   top: -2px;
@@ -587,7 +587,7 @@ section {
 .about .play-btn {
   width: 94px;
   height: 94px;
-  background: radial-gradient(#94c045 50%, rgba(148, 192, 69, 0.4) 52%);
+  background: radial-gradient(#386FA4 50%, rgba(132, 210, 246, 0.4) 52%);
   border-radius: 50%;
   display: block;
   position: absolute;
@@ -628,14 +628,14 @@ section {
   animation-timing-function: steps;
   opacity: 1;
   border-radius: 50%;
-  border: 5px solid rgba(148, 192, 69, 0.7);
+  border: 5px solid rgba(132, 210, 246, 0.7);
   top: -15%;
   left: -15%;
   background: rgba(198, 16, 0, 0);
 }
 
 .about .play-btn:hover::after {
-  border-left: 15px solid #94c045;
+  border-left: 15px solid #84D2F6;
   transform: scale(20);
 }
 
@@ -683,7 +683,7 @@ section {
 # Cta
 --------------------------------------------------------------*/
 .cta {
-  background: #86b03c;
+  background: #2773A5;
   padding: 50px 0;
 }
 
@@ -712,8 +712,8 @@ section {
 }
 
 .cta .cta-btn:hover {
-  background: #aacd6b;
-  border-color: #aacd6b;
+  background: #386FA4;
+  border-color: #386FA4;
 }
 
 /*--------------------------------------------------------------
@@ -2017,14 +2017,14 @@ section {
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  background: #141611;
+  background: #0F2F43;
   padding: 0 0 30px 0;
   color: #fff;
   font-size: 14px;
 }
 
 #footer .footer-top {
-  background: #1c1f18;
+  background: #133C55;
   padding: 60px 0 30px 0;
 }
 
@@ -2039,7 +2039,7 @@ section {
   line-height: 1;
   font-weight: 600;
   letter-spacing: 3px;
-  color: #9fc658;
+  color: #2773A5;
 }
 
 #footer .footer-top .footer-info p {
@@ -2052,7 +2052,7 @@ section {
 
 #footer .footer-top .social-links a {
   display: inline-block;
-  background: #3c4133;
+  background: #91E5F6;
   color: #fff;
   line-height: 1;
   margin-right: 4px;
@@ -2072,7 +2072,7 @@ section {
 }
 
 #footer .footer-top .social-links a:hover {
-  background: #94c045;
+  background: #2773A5;
   color: #fff;
   text-decoration: none;
 }
@@ -2100,7 +2100,7 @@ section {
 }
 
 #footer .footer-top h4::after {
-  background: #94c045;
+  background: #84D2F6;
   width: 60px;
 }
 
@@ -2124,7 +2124,7 @@ section {
 }
 
 #footer .footer-top .footer-links ul a:hover {
-  color: #94c045;
+  color: #2773A5;
 }
 
 #footer .footer-top .footer-contact {
@@ -2147,7 +2147,7 @@ section {
 }
 
 #footer .footer-top .footer-newsletter input[type="submit"] {
-  background: #94c045;
+  background: #386FA4;
   border: 0;
   border-radius: 0 4px 4px 0;
   width: 35%;
