minor css changes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -712,8 +712,8 @@ section {
 }
 
 .cta .cta-btn:hover {
-  background: #386FA4;
-  border-color: #386FA4;
+  background: #84D2F6;
+  border-color: white;
 }
 
 /*--------------------------------------------------------------
