--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -464,7 +464,7 @@ section {
 
 .breadcrumbs .breadcrumb-hero {
   text-align: center;
-  background: #94c045;
+  background: #3caad6;
   padding: 20px 0;
   color: #fff;
 }
@@ -1455,7 +1455,7 @@ section {
   height: 40px;
   opacity: 0;
   transition: bottom ease-in-out 0.4s;
-  background: rgba(148, 192, 69, 0.8);
+  background: rgba(49, 139, 241, 0.8);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -1491,7 +1491,7 @@ section {
   text-transform: uppercase;
   font-weight: 400;
   margin-bottom: 15px;
-  color: #94c045;
+  color: #040686;
 }
 
 .team .member .member-info p {
@@ -2172,4 +2172,21 @@ section {
   text-align: center;
   font-size: 13px;
   color: #fff;
+}
+
+/*otro css*/
+
+.icono{
+  text-align: center!important;
+  padding-right: 68%;
+  background-color: #44b7e4;
+}
+a {
+  color: #44b7e4;
+  text-decoration: none;
+}
+.img-fluid {
+  max-width: 100%;
+  height: 298px;
+  width: 370px;
 }
