--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -193,7 +193,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .navbar .dropdown ul a:hover, .navbar .dropdown ul .active:hover, .navbar .dropdown ul li:hover > a {
-  color: #94c045;
+  color: #0d6efd;
 }
 
 .navbar .dropdown:hover > ul {
@@ -287,7 +287,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .navbar-mobile a:hover, .navbar-mobile .active, .navbar-mobile li:hover > a {
-  color: #94c045;
+  color: #0d6efd;
 }
 
 .navbar-mobile .getstarted {
@@ -319,7 +319,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .navbar-mobile .dropdown ul a:hover, .navbar-mobile .dropdown ul .active:hover, .navbar-mobile .dropdown ul li:hover > a {
-  color: #94c045;
+  color: #0d6efd;
 }
 
 .navbar-mobile .dropdown > .dropdown-active {
@@ -464,7 +464,7 @@ section {
 
 .breadcrumbs .breadcrumb-hero {
   text-align: center;
-  background: #94c045;
+  background: #0d6efd;
   padding: 20px 0;
   color: #fff;
 }
