--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1298,7 +1298,7 @@ section {
 
 .contact .info i {
   font-size: 20px;
-  color: #94c045;
+  color: #0d6efd;
   float: left;
   width: 44px;
   height: 44px;
@@ -1330,7 +1330,7 @@ section {
 }
 
 .contact .info .email:hover i, .contact .info .address:hover i, .contact .info .phone:hover i {
-  background: #94c045;
+  background: #0d6efd;
   color: #fff;
 }
 
@@ -1409,7 +1409,7 @@ section {
 }
 
 .contact .php-email-form button[type="submit"]:hover {
-  background: #aacd6b;
+  background: #0d6efd;
 }
 
 @-webkit-keyframes animate-loading {
