--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2179,10 +2179,10 @@ section {
 .icono{
   text-align: center!important;
   padding-right: 68%;
-  background-color: #44b7e4;
+  background-color: #386FA4;
 }
 a {
-  color: #44b7e4;
+  color: #386FA4;
   text-decoration: none;
 }
 .img-fluid {
