--- a/TRABAJO FINAL/SOBRENOSOTROS/assets/css/style.css
+++ b/TRABAJO FINAL/SOBRENOSOTROS/assets/css/style.css
@@ -2212,3 +2212,46 @@ section {
     font-size: 13px;
     color: #fff;
 }
+
+.navbar a:hover,
+.navbar .active,
+.navbar .active:focus,
+.navbar li:hover>a {
+    color: #386FA4;
+}
+
+.navbar .getstarted {
+    background: #59A5D8;
+    padding: 8px 25px;
+    margin-left: 30px;
+    border-radius: 50px;
+}
+
+    .navbar .getstarted:hover {
+        color: #fff;
+        background: #84D2F6;
+    }
+
+
+    .navbar .dropdown ul {
+        border-radius: 50px;
+        transition: 0.5s;
+        margin: 10px;
+        border: 2px solid #59A5D8;
+        text-transform: uppercase;
+        color: #fff;
+    }
+
+    #hero .btn-get-started:hover {
+        background: #59A5D8;
+    }
+
+    @media (min-width: 1024px) {
+    }
+        .about .count-box i {
+            display: block;
+            font-size: 48px;
+            color: #59A5D8;
+            float: left;
+            line-height: 0;
+        }
