--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -464,7 +464,7 @@ section {
 
 .breadcrumbs .breadcrumb-hero {
   text-align: center;
-  background: #3caad6;
+  background: #386FA4;
   padding: 20px 0;
   color: #fff;
 }
