--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,16 +14,21 @@ body {
 }
 
 a {
-  color: #94c045;
+  color: #455bc0;
   text-decoration: none;
 }
 
 a:hover {
-  color: #aacd6b;
+  color: #6b7dcd;
   text-decoration: none;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: "Raleway", sans-serif;
 }
 
@@ -43,21 +48,23 @@ h1, h2, h3, h4, h5, h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #94c045;
+  background: #455bc0;
   width: 40px;
   height: 40px;
   border-radius: 4px;
   transition: all 0.4s;
 }
 
-.back-to-top i {
+.back-to-top svg {
   font-size: 28px;
   color: #fff;
   line-height: 0;
+  height: 36px;
+  width: 36px;
 }
 
 .back-to-top:hover {
-  background: #a6ca63;
+  background: #293f86;
   color: #fff;
 }
 
@@ -71,7 +78,7 @@ h1, h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 @media screen and (max-width: 768px) {
   [data-aos-delay] {
-    transition-delay: 0 !important;
+      transition-delay: 0 !important;
   }
 }
 
@@ -94,7 +101,8 @@ h1, h2, h3, h4, h5, h6 {
   letter-spacing: 1px;
 }
 
-#header .logo h1 a, #header .logo h1 a:hover {
+#header .logo h1 a,
+#header .logo h1 a:hover {
   color: #3c4133;
   text-decoration: none;
 }
@@ -127,7 +135,8 @@ h1, h2, h3, h4, h5, h6 {
   position: relative;
 }
 
-.navbar a, .navbar a:focus {
+.navbar a,
+.navbar a:focus {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -135,23 +144,27 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "Raleway", sans-serif;
   font-size: 15px;
   font-weight: 600;
-  color: #565e49;
+  color: #4e495e;
   white-space: nowrap;
   transition: 0.3s;
 }
 
-.navbar a i, .navbar a:focus i {
+.navbar a i,
+.navbar a:focus i {
   font-size: 12px;
   line-height: 0;
   margin-left: 5px;
 }
 
-.navbar a:hover, .navbar .active, .navbar .active:focus, .navbar li:hover > a {
-  color: #94c045;
+.navbar a:hover,
+.navbar .active,
+.navbar .active:focus,
+.navbar li:hover>a {
+  color: #456cc0;
 }
 
 .navbar .getstarted {
-  background: #94c045;
+  background: #4566c0;
   padding: 8px 25px;
   margin-left: 30px;
   border-radius: 50px;
@@ -160,7 +173,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .navbar .getstarted:hover {
   color: #fff;
-  background: #9fc658;
+  background: #5a58c6;
 }
 
 .navbar .dropdown ul {
@@ -176,6 +189,8 @@ h1, h2, h3, h4, h5, h6 {
   background: #fff;
   box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
   transition: 0.3s;
+  border-radius: 50px;
+  border: 2px solid #59A5D8;
 }
 
 .navbar .dropdown ul li {
@@ -188,15 +203,17 @@ h1, h2, h3, h4, h5, h6 {
   text-transform: none;
 }
 
-.navbar .dropdown ul a i {
+.navbar .dropdown ul a svg {
   font-size: 12px;
 }
 
-.navbar .dropdown ul a:hover, .navbar .dropdown ul .active:hover, .navbar .dropdown ul li:hover > a {
-  color: #94c045;
+.navbar .dropdown ul a:hover,
+.navbar .dropdown ul .active:hover,
+.navbar .dropdown ul li:hover>a {
+  color: #4547c0;
 }
 
-.navbar .dropdown:hover > ul {
+.navbar .dropdown:hover>ul {
   opacity: 1;
   top: 100%;
   visibility: visible;
@@ -208,7 +225,7 @@ h1, h2, h3, h4, h5, h6 {
   visibility: hidden;
 }
 
-.navbar .dropdown .dropdown:hover > ul {
+.navbar .dropdown .dropdown:hover>ul {
   opacity: 1;
   top: 0;
   left: 100%;
@@ -217,10 +234,11 @@ h1, h2, h3, h4, h5, h6 {
 
 @media (max-width: 1366px) {
   .navbar .dropdown .dropdown ul {
-    left: -90%;
+      left: -90%;
   }
-  .navbar .dropdown .dropdown:hover > ul {
-    left: -100%;
+
+  .navbar .dropdown .dropdown:hover>ul {
+      left: -100%;
   }
 }
 
@@ -228,7 +246,7 @@ h1, h2, h3, h4, h5, h6 {
 * Mobile Navigation 
 */
 .mobile-nav-toggle {
-  color: #3c4133;
+  color: #333441;
   font-size: 28px;
   cursor: pointer;
   display: none;
@@ -242,10 +260,11 @@ h1, h2, h3, h4, h5, h6 {
 
 @media (max-width: 991px) {
   .mobile-nav-toggle {
-    display: block;
+      display: block;
   }
+
   .navbar ul {
-    display: none;
+      display: none;
   }
 }
 
@@ -283,11 +302,13 @@ h1, h2, h3, h4, h5, h6 {
 .navbar-mobile a {
   padding: 10px 20px;
   font-size: 15px;
-  color: #3c4133;
+  color: #333541;
 }
 
-.navbar-mobile a:hover, .navbar-mobile .active, .navbar-mobile li:hover > a {
-  color: #94c045;
+.navbar-mobile a:hover,
+.navbar-mobile .active,
+.navbar-mobile li:hover>a {
+  color: #4566c0;
 }
 
 .navbar-mobile .getstarted {
@@ -314,15 +335,17 @@ h1, h2, h3, h4, h5, h6 {
   padding: 10px 20px;
 }
 
-.navbar-mobile .dropdown ul a i {
+.navbar-mobile .dropdown ul a svg {
   font-size: 12px;
 }
 
-.navbar-mobile .dropdown ul a:hover, .navbar-mobile .dropdown ul .active:hover, .navbar-mobile .dropdown ul li:hover > a {
-  color: #94c045;
+.navbar-mobile .dropdown ul a:hover,
+.navbar-mobile .dropdown ul .active:hover,
+.navbar-mobile .dropdown ul li:hover>a {
+  color: #4570c0;
 }
 
-.navbar-mobile .dropdown > .dropdown-active {
+.navbar-mobile .dropdown>.dropdown-active {
   display: block;
 }
 
@@ -341,7 +364,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #hero:before {
   content: "";
-  background: rgba(60, 65, 51, 0.4);
+  background: rgba(51, 54, 65, 0.4);
   position: absolute;
   bottom: 0;
   top: 0;
@@ -386,42 +409,45 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 50px;
   transition: 0.5s;
   margin: 10px;
-  border: 2px solid #94c045;
+  border: 2px solid #4566c0;
   text-transform: uppercase;
   color: #fff;
 }
 
 #hero .btn-get-started:hover {
-  background: #94c045;
+  background: #4562c0;
 }
 
 @media (min-width: 1024px) {
   #hero {
-    background-attachment: fixed;
+      background-attachment: fixed;
   }
 }
 
 @media (max-width: 768px) {
   #hero {
-    height: 100vh;
+      height: 100vh;
   }
+
   #hero h1 {
-    font-size: 28px;
-    line-height: 36px;
+      font-size: 28px;
+      line-height: 36px;
   }
+
   #hero h2 {
-    font-size: 18px;
-    line-height: 24px;
-    margin-bottom: 30px;
+      font-size: 18px;
+      line-height: 24px;
+      margin-bottom: 30px;
   }
+
   #hero .hero-container {
-    padding: 0 15px;
+      padding: 0 15px;
   }
 }
 
 @media (max-height: 500px) {
   #hero {
-    height: 120vh;
+      height: 120vh;
   }
 }
 
@@ -448,7 +474,7 @@ section {
   margin-bottom: 20px;
   padding-bottom: 0;
   font-family: "Poppins", sans-serif;
-  color: #646c55;
+  color: #555b6c;
 }
 
 .section-title p {
@@ -464,7 +490,7 @@ section {
 
 .breadcrumbs .breadcrumb-hero {
   text-align: center;
-  background: #386FA4;
+  background: #4570c0;
   padding: 20px 0;
   color: #fff;
 }
@@ -487,14 +513,14 @@ section {
   margin: 30px 0;
 }
 
-.breadcrumbs ol li + li {
+.breadcrumbs ol li+li {
   padding-left: 10px;
 }
 
-.breadcrumbs ol li + li::before {
+.breadcrumbs ol li+li::before {
   display: inline-block;
   padding-right: 10px;
-  color: #565e49;
+  color: #494f5e;
   content: "/";
 }
 
@@ -511,10 +537,10 @@ section {
   width: 100%;
 }
 
-.about .count-box i {
+.about .count-box svg {
   display: block;
   font-size: 48px;
-  color: #94c045;
+  color: #4562c0;
   float: left;
   line-height: 0;
 }
@@ -524,7 +550,7 @@ section {
   line-height: 24px;
   display: block;
   font-weight: 700;
-  color: #646c55;
+  color: #55596c;
   margin-left: 60px;
 }
 
@@ -534,21 +560,21 @@ section {
   font-family: "Raleway", sans-serif;
   font-weight: 600;
   font-size: 14px;
-  color: #646c55;
+  color: #55556c;
 }
 
 .about .count-box a {
   font-weight: 600;
   display: block;
   margin-top: 20px;
-  color: #646c55;
+  color: #555a6c;
   font-size: 15px;
   font-family: "Poppins", sans-serif;
   transition: ease-in-out 0.3s;
 }
 
 .about .count-box a:hover {
-  color: #8b9578;
+  color: #787895;
 }
 
 .about .content {
@@ -558,7 +584,7 @@ section {
 .about .content h3 {
   font-weight: 700;
   font-size: 24px;
-  color: #3c4133;
+  color: #333641;
 }
 
 .about .content ul {
@@ -572,9 +598,9 @@ section {
   position: relative;
 }
 
-.about .content ul i {
+.about .content ul svg {
   font-size: 24px;
-  color: #94c045;
+  color: #4566c0;
   position: absolute;
   left: 0;
   top: -2px;
@@ -587,7 +613,7 @@ section {
 .about .play-btn {
   width: 94px;
   height: 94px;
-  background: radial-gradient(#94c045 50%, rgba(148, 192, 69, 0.4) 52%);
+  background: radial-gradient(#4570c0 50%, rgba(69, 91, 192, 0.4) 52%);
   border-radius: 50%;
   display: block;
   position: absolute;
@@ -628,14 +654,14 @@ section {
   animation-timing-function: steps;
   opacity: 1;
   border-radius: 50%;
-  border: 5px solid rgba(148, 192, 69, 0.7);
+  border: 5px solid rgba(69, 133, 192, 0.7);
   top: -15%;
   left: -15%;
   background: rgba(198, 16, 0, 0);
 }
 
 .about .play-btn:hover::after {
-  border-left: 15px solid #94c045;
+  border-left: 15px solid #4557c0;
   transform: scale(20);
 }
 
@@ -659,23 +685,25 @@ section {
 
 @-webkit-keyframes pulsate-btn {
   0% {
-    transform: scale(0.6, 0.6);
-    opacity: 1;
+      transform: scale(0.6, 0.6);
+      opacity: 1;
   }
+
   100% {
-    transform: scale(1, 1);
-    opacity: 0;
+      transform: scale(1, 1);
+      opacity: 0;
   }
 }
 
 @keyframes pulsate-btn {
   0% {
-    transform: scale(0.6, 0.6);
-    opacity: 1;
+      transform: scale(0.6, 0.6);
+      opacity: 1;
   }
+
   100% {
-    transform: scale(1, 1);
-    opacity: 0;
+      transform: scale(1, 1);
+      opacity: 0;
   }
 }
 
@@ -683,7 +711,7 @@ section {
 # Cta
 --------------------------------------------------------------*/
 .cta {
-  background: #86b03c;
+  background: #3c4db0;
   padding: 50px 0;
 }
 
@@ -712,10 +740,9 @@ section {
 }
 
 .cta .cta-btn:hover {
-  background: #aacd6b;
-  border-color: #aacd6b;
+  background: #6b7dcd;
+  border-color: #6b8dcd;
 }
-
 /*--------------------------------------------------------------
 # Services
 --------------------------------------------------------------*/
@@ -1638,17 +1665,17 @@ section {
 }
 
 .blog .entry .entry-footer i {
-  color: #8b9578;
+  color: #788195;
   display: inline;
 }
 
 .blog .entry .entry-footer a {
-  color: #494f3e;
+  color: #3e464f;
   transition: 0.3s;
 }
 
 .blog .entry .entry-footer a:hover {
-  color: #94c045;
+  color: #457ac0;
 }
 
 .blog .entry .entry-footer .cats {
@@ -1673,7 +1700,7 @@ section {
   display: inline-block;
 }
 
-.blog .entry .entry-footer .tags li + li::before {
+.blog .entry .entry-footer .tags li+li::before {
   padding-right: 6px;
   color: #6c757d;
   content: ",";
@@ -2014,164 +2041,165 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Footer
---------------------------------------------------------------*/
-#footer {
-  background: #141611;
-  padding: 0 0 30px 0;
-  color: #fff;
-  font-size: 14px;
+  # Footer
+  --------------------------------------------------------------*/
+  #footer {
+    background: #111116;
+    padding: 0 0 30px 0;
+    color: #fff;
+    font-size: 14px;
 }
 
 #footer .footer-top {
-  background: #1c1f18;
-  padding: 60px 0 30px 0;
+    background: #18181f;
+    padding: 60px 0 30px 0;
 }
 
 #footer .footer-top .footer-info {
-  margin-bottom: 30px;
+    margin-bottom: 30px;
 }
 
 #footer .footer-top .footer-info h3 {
-  font-size: 26px;
-  margin: 0 0 10px 0;
-  padding: 2px 0 2px 0;
-  line-height: 1;
-  font-weight: 600;
-  letter-spacing: 3px;
-  color: #9fc658;
+    font-size: 26px;
+    margin: 0 0 10px 0;
+    padding: 2px 0 2px 0;
+    line-height: 1;
+    font-weight: 600;
+    letter-spacing: 3px;
+    color: #5884c6;
 }
 
 #footer .footer-top .footer-info p {
-  font-size: 14px;
-  line-height: 24px;
-  margin-bottom: 0;
-  font-family: "Raleway", sans-serif;
-  color: #fff;
+    font-size: 14px;
+    line-height: 24px;
+    margin-bottom: 0;
+    font-family: "Raleway", sans-serif;
+    color: #fff;
 }
 
 #footer .footer-top .social-links a {
-  display: inline-block;
-  background: #3c4133;
-  color: #fff;
-  line-height: 1;
-  margin-right: 4px;
-  border-radius: 50%;
-  text-align: center;
-  width: 36px;
-  height: 36px;
-  transition: 0.3s;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
+    display: inline-block;
+    background: #333541;
+    color: #fff;
+    line-height: 1;
+    margin-right: 4px;
+    border-radius: 50%;
+    text-align: center;
+    width: 36px;
+    height: 36px;
+    transition: 0.3s;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #footer .footer-top .social-links a i {
-  line-height: 0;
-  font-size: 16px;
+    line-height: 0;
+    font-size: 16px;
 }
 
 #footer .footer-top .social-links a:hover {
-  background: #94c045;
-  color: #fff;
-  text-decoration: none;
+    background: #456cc0;
+    color: #fff;
+    text-decoration: none;
 }
 
 #footer .footer-top h4 {
-  font-size: 14px;
-  font-weight: bold;
-  color: #fff;
-  text-transform: uppercase;
-  position: relative;
-  padding-bottom: 12px;
+    font-size: 14px;
+    font-weight: bold;
+    color: #fff;
+    text-transform: uppercase;
+    position: relative;
+    padding-bottom: 12px;
 }
 
-#footer .footer-top h4::before, #footer .footer-top h4::after {
-  content: '';
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  height: 2px;
+#footer .footer-top h4::before,
+#footer .footer-top h4::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 2px;
 }
 
 #footer .footer-top h4::before {
-  right: 0;
-  background: #3c4133;
+    right: 0;
+    background: #333441;
 }
 
 #footer .footer-top h4::after {
-  background: #94c045;
-  width: 60px;
+    background: #4576c0;
+    width: 60px;
 }
 
 #footer .footer-top .footer-links {
-  margin-bottom: 30px;
+    margin-bottom: 30px;
 }
 
 #footer .footer-top .footer-links ul {
-  list-style: none;
-  padding: 5px 0 0 0;
-  margin: 0;
+    list-style: none;
+    padding: 5px 0 0 0;
+    margin: 0;
 }
 
 #footer .footer-top .footer-links ul li {
-  padding: 0 0 15px 0;
+    padding: 0 0 15px 0;
 }
 
 #footer .footer-top .footer-links ul a {
-  color: #fff;
-  transition: 0.3s;
+    color: #fff;
+    transition: 0.3s;
 }
 
 #footer .footer-top .footer-links ul a:hover {
-  color: #94c045;
+    color: #4570c0;
 }
 
 #footer .footer-top .footer-contact {
-  margin-bottom: 30px;
+    margin-bottom: 30px;
 }
 
 #footer .footer-top .footer-contact p {
-  line-height: 26px;
+    line-height: 26px;
 }
 
 #footer .footer-top .footer-newsletter {
-  margin-bottom: 30px;
+    margin-bottom: 30px;
 }
 
 #footer .footer-top .footer-newsletter input[type="email"] {
-  border: 0;
-  padding: 6px 8px;
-  width: 65%;
-  border-radius: 4px 0 0 4px;
+    border: 0;
+    padding: 6px 8px;
+    width: 65%;
+    border-radius: 4px 0 0 4px;
 }
 
 #footer .footer-top .footer-newsletter input[type="submit"] {
-  background: #94c045;
-  border: 0;
-  border-radius: 0 4px 4px 0;
-  width: 35%;
-  padding: 6px 0;
-  text-align: center;
-  color: #fff;
-  transition: 0.3s;
-  cursor: pointer;
+    background: #456cc0;
+    border: 0;
+    border-radius: 0 4px 4px 0;
+    width: 35%;
+    padding: 6px 0;
+    text-align: center;
+    color: #fff;
+    transition: 0.3s;
+    cursor: pointer;
 }
 
 #footer .footer-top .footer-newsletter input[type="submit"]:hover {
-  background: #789d35;
+    background: #35599d;
 }
 
 #footer .copyright {
-  text-align: center;
-  padding-top: 30px;
+    text-align: center;
+    padding-top: 30px;
 }
 
 #footer .credits {
-  padding-top: 10px;
-  text-align: center;
-  font-size: 13px;
-  color: #fff;
+    padding-top: 10px;
+    text-align: center;
+    font-size: 13px;
+    color: #fff;
 }
 
 /*otro css*/
