--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -572,9 +572,9 @@ section {
   position: relative;
 }
 
-.about .content ul i {
+.about .content ul svg {
   font-size: 24px;
-  color: #84D2F6;
+  color: #4566c0;
   position: absolute;
   left: 0;
   top: -2px;
@@ -891,11 +891,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #94c045;
+  border: 1px solid #4551c0;
 }
 
 .clients .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #94c045;
+  background-color: #4547c0;
 }
 
 /*--------------------------------------------------------------
