--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1967,7 +1967,7 @@ section {
 }
 
 .blog .sidebar .recent-posts h4 a:hover {
-  color: #94c045;
+  color: #2773A5;
 }
 
 .blog .sidebar .recent-posts time {
