--- a/Merchandaisin (index)/assets/css/style.css
+++ b/Merchandaisin (index)/assets/css/style.css
@@ -9,7 +9,7 @@
 # General
 --------------------------------------------------------------*/
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Raleway", sans-serif;
   color: #444444;
 }
 
