--- a/Merchandaisin (index)/assets/css/templatemo-sixteen.css
+++ b/Merchandaisin (index)/assets/css/templatemo-sixteen.css
@@ -16,7 +16,7 @@ p {
 	margin-bottom: 0px;
 	font-size: 14px;
 	font-weight: 300;
-	color: #0040ff;
+	color: #59A5D8;
 	line-height: 24px;
 }
 a {
@@ -454,7 +454,7 @@ header .navbar {
 }
 
 .product-item .down-content ul li i {
-	color: #f33f3f;
+	color: #ffff40;
 	font-size: 14px;
 }
 
@@ -463,7 +463,7 @@ header .navbar {
 	right: 30px;
 	bottom: 30px;
 	font-size: 13px;
-	color: #f33f3f;
+	color: #59A5D8;
 	font-weight: 500;
 }
 
