--- a/Merchandaisin (index)/assets/css/style.css
+++ b/Merchandaisin (index)/assets/css/style.css
@@ -2177,3 +2177,6 @@ section {
 /*--------------------------------------------------------------
 Custom CSS
 --------------------------------------------------------------*/
+.btndon {
+  font-size: 13px !important;
+}
